<resources>
    <string name="app_name">Math Attack</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Main Menu</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="left_button_text">10</string>
    <string name="mid_button_text">20</string>
    <string name="right_button_text">30</string>
    <string name="text_view_text">0</string>
    <string name="refresh_button_text">New Question</string>
    <string name="player_label_text">Player</string>
    <string name="enemy_label_text">Enemy</string>
    <string name="player_display_text">default</string>
    <string name="enemy_display_text">default</string>
    <string name="mainLabelText">Please help! We are under attack by the evil Math Monsters! Save Us!</string>
    <string name="editTextHint">Name</string>
    <string name="startButtonText">Start!</string>
    <string name="score">Score</string>
    <string name="highscores">HighScores</string>
    <string name="list">list</string>
    <string name="modeAddText">Addition Armada</string>
    <string name="modeSubtractionText">Minus Militia</string>
    <string name="modeSuperText">Super Special Forces</string>
    <string name="modeTutorialText">Choose which army you will assault today.</string>
</resources>